Fix grid gap

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -75,7 +75,6 @@ body {
 .grid-container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  gap: 25px;
 }
 
 .grid-span-1 {
